1. Optimization Results (case name)

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,7 +41,7 @@
                                    href="{% url 'matching_assignment_app:transport_assignment_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'transport_assignment_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'Transport Assignment Demo' %}active{% endif %}"
                                    href="{% url 'matching_assignment_app:transport_assignment_demo' %}">Demo</a>
                             </li>
 
@@ -51,7 +51,7 @@
                                    href="{% url 'matching_assignment_app:resource_skill_matching_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'resource_skill_matching_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'resource Skill Matching Demo' %}active{% endif %}"
                                    href="{% url 'matching_assignment_app:resource_skill_matching_demo' %}">Demo</a>
                             </li>
 
@@ -62,7 +62,7 @@
                                    href="{% url 'resource_allocation_app:budget_allocation_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'budget_allocation_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'Budget Allocation Demo' %}active{% endif %}"
                                    href="{% url 'resource_allocation_app:budget_allocation_demo' %}">Demo</a>
                             </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Data Center Capacity</strong></li>
@@ -71,7 +71,7 @@
                                    href="{% url 'resource_allocation_app:data_center_capacity_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'data_center_capacity_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'Data Center Capacity Demo' %}active{% endif %}"
                                    href="{% url 'resource_allocation_app:data_center_capacity_demo' %}">Demo</a>
                             </li>
 
@@ -81,7 +81,7 @@
                                         href="{% url 'resource_allocation_app:financial_portfolio_introduction' %}">Introduction</a>-->
 <!--                            </li>-->
 <!--                            <li class="nav-item nested">-->
-<!--                                <a class="nav-link {% if active_submenu == 'financial_portfolio_demo' %}active{% endif %}"
+<!--                                <a class="nav-link {% if active_submenu == 'Financial Portfolio Demo' %}active{% endif %}"
                                         href="{% url 'resource_allocation_app:financial_portfolio_demo' %}">Demo(준비중)</a>-->
 <!--                            </li>-->
                         {% elif active_model == 'Routing & Logistics' %}
@@ -91,7 +91,7 @@
                                    href="{% url 'routing_logistics_app:vrp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'vrp_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'VRP Demo' %}active{% endif %}"
                                    href="{% url 'routing_logistics_app:vrp_demo' %}">Demo</a>
                             </li>
                             <li class="nav-item nested">
@@ -104,7 +104,7 @@
                                    href="{% url 'routing_logistics_app:cvrp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'cvrp_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'CVRP Demo' %}active{% endif %}"
                                    href="{% url 'routing_logistics_app:cvrp_demo' %}">Demo</a>
                             </li>
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Pickup and Delivery Problem- PDP</strong></li>
@@ -113,7 +113,7 @@
                                    href="{% url 'routing_logistics_app:pdp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'pdp_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'PDP Demo' %}active{% endif %}"
                                    href="{% url 'routing_logistics_app:pdp_demo' %}">Demo</a>
                             </li>
 
@@ -124,7 +124,7 @@
                                    href="{% url 'production_scheduling_app:lot_sizing_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'lot_sizing_demo' %}active{% endif %}" href="{% url 'production_scheduling_app:lot_sizing_demo' %}">Demo</a>
+                                <a class="nav-link {% if active_submenu == 'Lot Sizing Demo' %}active{% endif %}" href="{% url 'production_scheduling_app:lot_sizing_demo' %}">Demo</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Single Machine Scheduling</strong></li>
@@ -133,7 +133,7 @@
                                    href="{% url 'production_scheduling_app:single_machine_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'single_machine_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'Single Machine Demo' %}active{% endif %}"
                                    href="{% url 'production_scheduling_app:single_machine_demo' %}">Demo</a>
                             </li>
                             <li class="nav-item nested">
@@ -147,7 +147,7 @@
                                    href="{% url 'production_scheduling_app:flow_shop_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'flow_shop_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'Flow Shop Demo' %}active{% endif %}"
                                    href="{% url 'production_scheduling_app:flow_shop_demo' %}">Demo</a>
                             </li>
 
@@ -157,7 +157,7 @@
                                    href="{% url 'production_scheduling_app:job_shop_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'job_shop_introduction' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'Job Shop Demo' %}active{% endif %}"
                                    href="{% url 'production_scheduling_app:job_shop_demo' %}">Demo</a>
                             </li>
 
@@ -167,7 +167,7 @@
                                    href="{% url 'production_scheduling_app:rcpsp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'rcpsp_demo' %}active{% endif %}"
+                                <a class="nav-link {% if active_submenu == 'RCPSP Demo' %}active{% endif %}"
                                    href="{% url 'production_scheduling_app:rcpsp_demo' %}">Demo</a>
                             </li>
                         {% elif active_model == 'Puzzles & Real-World Logic' %}
@@ -176,7 +176,7 @@
                                 <a class="nav-link {% if active_submenu == 'diet_problem_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'diet_problem_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Diet Problem Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_demo' %}">Demo (WIP)</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Sports Scheduling</strong></li>
@@ -184,7 +184,7 @@
                                 <a class="nav-link {% if active_submenu == 'sports_scheduling_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'sports_scheduling_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Sports Scheduling Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_demo' %}">Demo (WIP)</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Nurse Rostering</strong></li>
@@ -192,7 +192,7 @@
                                 <a class="nav-link {% if active_submenu == 'nurse_rostering_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:nurse_rostering_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'nurse_rostering_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:nurse_rostering_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Nurse Rostering Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:nurse_rostering_demo' %}">Demo (WIP)</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Traveling Salesman Problem (TSP)</strong></li>
@@ -200,7 +200,7 @@
                                 <a class="nav-link {% if active_submenu == 'tsp_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'tsp_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'TSP Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_demo' %}">Demo (WIP)</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Sudoku Solver</strong></li>
@@ -208,7 +208,7 @@
                                 <a class="nav-link {% if active_submenu == 'sudoku_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'sudoku_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Sudoku Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_demo' %}">Demo (WIP)</a>
                             </li>
                         {% endif %}
                     </ul>
