--- a/production_scheduling_app/templates/production_scheduling_app/lot_sizing_demo.html
+++ b/production_scheduling_app/templates/production_scheduling_app/lot_sizing_demo.html
@@ -98,7 +98,7 @@
     {% endif %}
     {% if opt_results is not None or error_message or success_message %}
     <hr class="my-4">
-    <h3 class="mt-4">Optimization Results ({{ form_data.problem_type }})</h3>
+    <h3 class="mt-4">Optimization Results ({{ active_submenu }})</h3>
     {% endif %}
     {% if error_message %}
         <div class="alert alert-danger" role="alert"><strong>오류:</strong> {{ error_message }}</div>
