--- a/matching_assignment_app/templates/matching_assignment_app/resource_skill_matching_demo.html
+++ b/matching_assignment_app/templates/matching_assignment_app/resource_skill_matching_demo.html
@@ -60,7 +60,7 @@
 
     <form method="POST" id="skillMatchingForm">
         {% csrf_token %}
-        <input type="hidden" name="problem_type" value="Resource Skill Matching" id="problem_type">
+        <input type="hidden" name="problem_type" value="resource skill" id="problem_type">
         <input type="hidden" name="num_resources" value="{{ submitted_num_resources }}">
         <input type="hidden" name="num_projects" value="{{ submitted_num_projects }}">
 
@@ -135,7 +135,7 @@
     {% endif %}
     {% if opt_results is not None or error_message or success_message %}
     <hr class="my-4">
-    <h3 class="mt-4">Optimization Results ({{ form_data.problem_type }})</h3>
+    <h3 class="mt-4">Optimization Results ({{ active_submenu }})</h3>
     {% endif %}
     {% if error_message %}
         <div class="alert alert-danger" role="alert"><strong>오류:</strong> {{ error_message }}</div>
